--- a/css/styles.css
+++ b/css/styles.css
@@ -268,7 +268,8 @@ button {
 
     outline: transparent;
     border-radius: 50%;
-    border: 1px solid rgba(0, 0, 0, 0.1);        
+    border: 1px solid rgba(0, 0, 0, 0.1);      
+    background-color: transparent;  
 }
 
 .modal-btn:hover,
