--- a/css/styles.css
+++ b/css/styles.css
@@ -423,6 +423,16 @@ button {
     border-color: var(--accent-color);
 }
 
+.checkbox-original:focus+.custom-checkbox {
+    
+    border-color: var(--accent-color);
+}
+
+.agrement-terms {
+    text-decoration-line: underline;
+    color: var(--accent-color);
+}
+
 /* sections -------------------------------------------------- */
 .features {    
     padding-top: 94px;
@@ -742,8 +752,7 @@ button {
     align-items: center;
     justify-content: center;
   
-    width: 200px;
-    height: 50px;
+    padding: 10px 28px;
 
     font-weight: 700;
   /*  font-size: 16px; */
